--- a/examples/openllama-3b/config.yml
+++ b/examples/openllama-3b/config.yml
@@ -36,7 +36,7 @@ learning_rate: 0.000003
 train_on_inputs: false
 group_by_length: false
 float16: true
-bf16: false
+bf16: true
 fp16: false
 tf32: false
 gradient_checkpointing: true
