--- a/examples/mistral/qlora_function_calling.yml
+++ b/examples/mistral/qlora_function_calling.yml
@@ -9,9 +9,9 @@ strict: false
 datasets:
   - path: glaiveai/glaive-function-calling-v2
     type: sharegpt.load_glaive
-    conversation: chatml_glaive
+    conversation: chatml
 
-dataset_prepared_path: last_run_prepared
+dataset_prepared_path:
 val_set_size: 0.1
 output_dir: ./qlora-out-mistral-fun-call
 
